# gitbroom

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  SKILLS.md  gitbroom.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
src/gitbroom/: __main__.py  main.py
src/gitbroom/config/: settings.py
src/gitbroom/core/: branch.py  cleaner.py  logging_setup.py  models.py  repo.py  scorer.py
src/gitbroom/gitlab/: client.py  enricher.py
src/gitbroom/ui/: app.py  exporters.py  main_window.py  workers.py
src/gitbroom/ui/models/: branch_table_model.py
src/gitbroom/ui/theme/: colors.py  icons.py  style_dark.qss  style_light.qss  theme.py
src/gitbroom/ui/widgets/: branch_detail.py  branch_table.py  commit_detail_dialog.py  delete_dialog.py  diff_highlighter.py  repo_selector.py  repo_tab.py  settings_dialog.py  summary_dialog.py
tests/config/: test_settings.py
tests/core/: test_branch_analyzer.py  test_branch_collector.py  test_cleaner.py  test_models.py  test_repo.py  test_scorer.py
tests/gitlab/: test_gitlab_client.py
tests/ui/: test_branch_table_model.py  test_commit_detail_dialog.py  test_delete_dialog.py  test_settings_dialog.py
